--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
   "dependencies": {
     "express": "^4.18.1",
     "express-handlebars": "^4.0.2",
+    "global": "^4.4.0",
     "method-override": "^3.0.0",
-    "mongoose": "^6.6.2"
+    "mongoose": "^6.6.2",
+    "standard": "^17.0.0"
   }
 }
